force-app/main/default/objects/My_Component__c/My_Component__c.object-meta.xml
<CustomObject>
    <label>My Component</label>
    <nameField>
        <label>My Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>