force-app/main/default/objects/My_Component__c/fields/Cable_Connectors__c.field-meta.xml
<CustomField>
    <fullName>Cable_Connectors__c</fullName>
    <label>Cable Connectors</label>
    <length>128</length>
    <type>Text</type>
</CustomField>