force-app/main/default/objects/My_Component__c/fields/My_Phono_Stage__c.field-meta.xml
<CustomField>
    <fullName>My_Phono_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Phono Stage</label>
    <referenceTo>My_Phono_Stage__c</referenceTo>
    <relationshipLabel>My Component Shadow</relationshipLabel>
    <relationshipName>My_Component_Shadow</relationshipName>
    <type>Lookup</type>
</CustomField>