force-app/main/default/objects/My_Component__c/fields/Tube_ID__c.field-meta.xml
<CustomField>
    <fullName>Tube_ID__c</fullName>
    <label>Tube ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>