force-app/main/default/objects/My_Component__c/fields/Tube_Label__c.field-meta.xml
<CustomField>
    <fullName>Tube_Label__c</fullName>
    <label>Tube Label</label>
    <length>128</length>
    <type>Text</type>
</CustomField>