force-app/main/default/objects/My_Component__c/fields/Tube_Plates__c.field-meta.xml
<CustomField>
    <fullName>Tube_Plates__c</fullName>
    <label>Tube Plates</label>
    <length>128</length>
    <type>Text</type>
</CustomField>