force-app/main/default/objects/My_Component__c/fields/Tube_Source__c.field-meta.xml
<CustomField>
    <fullName>Tube_Source__c</fullName>
    <description>E.g. VTS, Brent Jesse, Upscale</description>
    <inlineHelpText>E.g. VTS, Brent Jesse, Upscale</inlineHelpText>
    <label>Tube Source</label>
    <length>128</length>
    <type>Text</type>
</CustomField>