force-app/main/default/objects/My_Component__c/fields/Tube_Vintage__c.field-meta.xml
<CustomField>
    <fullName>Tube_Vintage__c</fullName>
    <label>Tube Vintage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>