force-app/main/default/objects/My_Component__c/recordTypes/DAC.recordType-meta.xml
<RecordType>
    <fullName>DAC</fullName>
    <active>true</active>
    <label>DAC</label>
</RecordType>