force-app/main/default/objects/My_Component__c/recordTypes/DDC.recordType-meta.xml
<RecordType>
    <fullName>DDC</fullName>
    <active>true</active>
    <label>DDC</label>
</RecordType>