force-app/main/default/objects/My_Component__c/recordTypes/Digital_Cable.recordType-meta.xml
<RecordType>
    <fullName>Digital_Cable</fullName>
    <active>true</active>
    <label>Digital Cable</label>
</RecordType>