force-app/main/default/objects/My_Component__c/recordTypes/Headphone.recordType-meta.xml
<RecordType>
    <fullName>Headphone</fullName>
    <active>true</active>
    <label>Headphone</label>
</RecordType>