force-app/main/default/objects/My_Component__c/recordTypes/Headphone_Amplifier.recordType-meta.xml
<RecordType>
    <fullName>Headphone_Amplifier</fullName>
    <active>true</active>
    <label>Headphone Amplifier</label>
</RecordType>