force-app/main/default/objects/My_Component__c/recordTypes/Interconnect.recordType-meta.xml
<RecordType>
    <fullName>Interconnect</fullName>
    <active>true</active>
    <label>Interconnect</label>
</RecordType>