force-app/main/default/objects/My_Component__c/recordTypes/Phono_Stage.recordType-meta.xml
<RecordType>
    <fullName>Phono_Stage</fullName>
    <active>true</active>
    <label>Phono Stage</label>
</RecordType>