force-app/main/default/objects/My_Component__c/recordTypes/Power_Cable.recordType-meta.xml
<RecordType>
    <fullName>Power_Cable</fullName>
    <active>true</active>
    <label>Power Cable</label>
</RecordType>