force-app/main/default/objects/My_Component__c/recordTypes/Power_Center.recordType-meta.xml
<RecordType>
    <fullName>Power_Center</fullName>
    <active>true</active>
    <label>Power Center</label>
</RecordType>