force-app/main/default/objects/My_Component__c/recordTypes/Tube.recordType-meta.xml
<RecordType>
    <fullName>Tube</fullName>
    <active>true</active>
    <label>Tube</label>
</RecordType>