force-app/main/default/objects/My_Component__c/recordTypes/Turntable.recordType-meta.xml
<RecordType>
    <fullName>Turntable</fullName>
    <active>true</active>
    <label>Turntable</label>
</RecordType>